--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.ACTIONS_TOKEN }}
           publish_dir: ./out
           publish_branch: gh-pages
           cname: example.com
@@ -62,7 +62,7 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.ACTIONS_TOKEN }}
           publish_dir: ./out
           publish_branch: gh-pages
           cname: example.com
