--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -78,8 +78,8 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
-          name: build
-          patch: .next
+            name: build
+            path: .next
 
   # Deployment job
   deploy:
