--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -75,6 +75,10 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
+      - name: Remove symbolic links
+        run: find ./out -type l -exec rm -f {} \;
+      - name: Verify directory size
+        run: du -sh ./out
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
