--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "apexcharts": "3.37.0",
     "axios": "^1.7.2",
     "date-fns": "2.29.3",
+    "dotenv": "^16.4.5",
     "formik": "2.2.9",
     "next": "13.1.6",
     "nprogress": "0.2.0",
