--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -76,10 +76,10 @@ jobs:
       - name: Build with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
       - name: Upload artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: github-pages
-          path: ./out
+          path: .next
 
   # Deployment job
   deploy:
