--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
+    "start:prod": "next start -p 3000",
     "export": "next export",
     "lint": "next lint",
     "lint-fix": "next lint --fix"
