--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,35 +9,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '18'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build project
-        env:
-          NODE_OPTIONS: '--max-old-space-size=4096 --openssl-legacy-provider'
-        run: npm run build
-
-      - name: Archive build files
-        run: tar -czf build.tar.gz .next
-
-      - name: Copy files via SSH
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.PRIVATE_KEY }}
-          port: 22
-          source: build.tar.gz
-          target: /home/bitnami/htdocs/frontend-impch-zanartu
-
       - name: Deploy using ssh
         uses: appleboy/ssh-action@master
         with:
@@ -47,12 +18,13 @@ jobs:
           key_type: pem
           port: 22
           script: |
-            cd /home/bitnami/htdocs/frontend-impch-zanartu
-            tar -xzf build.tar.gz
-            rm -rf build.tar.gz build
+            cd /home/bitnami/paginas/frontend-impch-zanartu
             echo NEXT_PUBLIC_URL=localhost:4000 > .env
             echo NEXT_PUBLIC_PATHLOGIN=/auth/login >>.env
             echo NEXT_PUBLIC_PATCHGRAPHQL=/graphql >>.env
-            npm ci
-            pm2 stop frontend-impch
-            pm2 restart frontend-impch
+            echo NEXT_PUBLIC_PATCHGRAPHQL=/graphql >>.env
+            npm install
+            npm run build
+            pm2 stop frontend-impch-zanartu
+            pm2 restart frontend-impch-zanartu
+
