--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
-name: Deploy to server LightSail TurnoFarm
+name: Deploy to server LightSail Impch Zanartu Frontend
 
 on:
   push:
-    branches: [ main ]
-
+    branches:
+      - main
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -25,6 +25,5 @@ jobs:
             echo NEXT_PUBLIC_PATCHGRAPHQL=/graphql >>.env
             npm install
             npm run build
-            pm2 stop frontend-impch-zanartu
             pm2 restart frontend-impch-zanartu
 
