--- a/package.json
+++ b/package.json
@@ -26,21 +26,22 @@
     "@mui/x-date-pickers": "5.0.19",
     "apexcharts": "3.37.0",
     "axios": "^1.7.2",
+    "braces": ">=3.0.3",
     "date-fns": "2.29.3",
     "dotenv": "^16.4.5",
     "formik": "2.2.9",
+    "jspdf": "^2.5.1",
     "next": "^14.1.1",
     "next-plugin-graphql": "^0.0.2",
     "nprogress": "0.2.0",
+    "postcss": ">=8.4.31",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.0",
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10",
     "simplebar-react": "^3.2.1",
-    "yup": "1.0.0",
-    "braces": ">=3.0.3",
-    "postcss": ">=8.4.31"
+    "yup": "1.0.0"
   },
   "devDependencies": {
     "@types/node": "18.13.0",
