--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "formik": "2.2.9",
     "gettext": "^0.0.1",
     "graphql-tag": "^2.12.6",
+    "hoist-non-react-statics": "^3.3.2",
     "jspdf": "^2.5.1",
     "next": "^14.1.1",
     "next-plugin-graphql": "^0.0.2",
@@ -51,7 +52,7 @@
     "@types/numeral": "2.0.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "eslint": "8.34.0",
+    "eslint": "^8.34.0",
     "eslint-config-next": "13.1.6"
   }
 }
