--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "start:prod": "next start -p 3000",
     "export": "next export",
     "lint": "next lint",
-    "lint-fix": "next lint --fix"
+    "lint-fix": "next lint --fix",
+    "bump-patch": "npm version patch -m \"Bump version to %s\" && git push && git push --tags",
+    "bump-minor": "npm version minor -m \"Bump version to %s\" && git push && git push --tags",
+    "bump-major": "npm version major -m \"Bump version to %s\" && git push && git push --tags"
   },
   "dependencies": {
     "@apollo/client": "^3.10.5",
