--- a/package.json
+++ b/package.json
@@ -57,5 +57,6 @@
     "@types/react-dom": "18.0.11",
     "eslint": "^8.34.0",
     "eslint-config-next": "13.1.6"
-  }
+  },
+  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
 }
