--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "clsx": "^2.1.1",
     "graphql": "^16.12.0",
     "graphql-tag": "^2.12.6",
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.4",
     "next-plugin-graphql": "^0.0.2",
