Add rehearsal management features: implement CRUD operations for rehearsals, including creating, updating, and deleting rehearsals. Enhance attendance tracking with member registration and attendance statistics. Integrate GraphQL queries and mutations for seamless data handling, and improve UI components for better user experience.

--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "graphql": "^16.12.0",
     "graphql-tag": "^2.12.6",
+    "html5-qrcode": "^2.3.8",
     "jspdf": "^4.0.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.4",
